# ReVengine

./: .gitignore  README.md
ReVengine/: CMakeLists.txt  vcpkg.json
ReVengine/ReVengine-Engine/: CMakeLists.txt  ReVengine.cpp  ReVengine.h  Rev_CoreSystems.cpp  Rev_CoreSystems.h
ReVengine/ReVengine-Engine/DirectX11/: RenderWindow.cpp  RenderWindow.h  WindowHandler.cpp  WindowHandler.h
ReVengine/ReVengine-Engine/DirectX11/shaders/: PixelShader.hlsl  VertexShader.hlsl  shader.hlsl
ReVengine/ReVengine-Engine/GameObjects/: BaseComponent.cpp  BaseComponent.h  GameObject.cpp  GameObject.h
ReVengine/ReVengine-Engine/GameObjects/Components/: CompCamera.cpp  CompCamera.h  CompCollision.cpp  CompCollision.h  CompInput.cpp  CompInput.h  CompRender.cpp  CompRender.h  CompTest.cpp  CompTest.h  CompTransform.cpp  CompTransform.h
ReVengine/ReVengine-Engine/Input/: InputManager.cpp  InputManager.h
ReVengine/ReVengine-Engine/Physics/: Physics.cpp  Physics.h  PhysicsImpl.cpp  PhysicsImpl.h
ReVengine/ReVengine-Engine/Physics/PhysX/: CollisionCallback.h  Physics_PhysX.cpp  Physics_PhysX.h
ReVengine/ReVengine-Engine/Rendering/: Mesh.cpp  Mesh.h  RenderWindow.cpp  RenderWindow.h  Texture.cpp  Texture.h
ReVengine/ReVengine-Engine/Rendering/Camera/: Camera.cpp  Camera.h
ReVengine/ReVengine-Engine/Rendering/Direct3D11/: Mesh.cpp  Mesh.h  TextureShader.cpp  TextureShader.h  WindowHandler.cpp  WindowHandler.h
ReVengine/ReVengine-Engine/Rendering/Direct3D11/Meshes/: Mesh.h
ReVengine/ReVengine-Engine/Rendering/HLSLshaders/: PixelShader.hlsl  UI_vs.hlsl  VertexShader.hlsl
ReVengine/ReVengine-Engine/Rendering/HUD/: UI.cpp  UI.h
ReVengine/ReVengine-Engine/Rendering/HUD/ImGui/: ImGuiSetup.cpp  ImGuiSetup.h
ReVengine/ReVengine-Engine/Rendering/ImGui/: ImGuiSetup.cpp  ImGuiSetup.h
ReVengine/ReVengine-Engine/Rendering/Shaders/: BaseShader.cpp  BaseShader.h  TextureShader.cpp  TextureShader.h  TextureShader2D.cpp  TextureShader2D.h
ReVengine/ReVengine-Engine/Rendering/shaders/: PixelShader.hlsl  VertexShader.hlsl
ReVengine/ReVengine-Engine/ResourceManagement/: MemoryPool.cpp  MemoryPool.h  ResourceManager.cpp  ResourceManager.h
ReVengine/ReVengine-Engine/Resources/shaders/: PixelShader.hlsl  VertexShader.hlsl
ReVengine/ReVengine-Engine/Scenes/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
ReVengine/ReVengine-Engine/Sound/: Rev_Sound.H  Rev_Sound.cpp  Rev_SoundImpl.cpp  Rev_SoundImpl.h
ReVengine/ReVengine-Engine/Sound/SoLoud/: Rev_SoLoud.cpp  Rev_SoLoud.h
ReVengine/ReVengine-Engine/Utils/: Vector3.h  Vertex.h
ReVengine/ReVengine-Game/: CMakeLists.txt  Game.cpp  Game.h  GameSettings.h
ReVengine/ReVengine-Game/Objects/Weapons/: BulletComp.cpp  BulletComp.h  GunComp.cpp  GunComp.h
